test/error/InfRecursion.mod
MODULE InfRecursion;

 PROCEDURE Go*;
 BEGIN
   Go
 END Go;

END InfRecursion.
